Dodawanie formularzy oraz ich wyświetlanie

--- a/docforge/templates/base.jinja2
+++ b/docforge/templates/base.jinja2
@@ -6,6 +6,13 @@
 {% block head %}
 {% endblock %}
 <body>
+<div>
+Menu:<br/>
+<ul>
+<li><a href='/formatki/list'>Lista formularzy</a></li>
+<li><a href='/formatki/add'>Dodaj formularz</a></li>
+</ul>
+</div>
 {% block content %}
 To jest template glowny
 {% endblock %}
