Możliwość wyświetlania wniosków

--- a/docforge/templates/base.jinja2
+++ b/docforge/templates/base.jinja2
@@ -11,6 +11,7 @@ Menu:<br/>
 <ul>
 <li><a href='/formatki/list'>Lista formularzy</a></li>
 <li><a href='/formatki/add'>Dodaj formularz</a></li>
+<li><a href='/wpis/list'>Przeglądaj wnioski</a></li>
 </ul>
 </div>
 {% block content %}
