sortowanie wnoisków po wartościach w kolumnach

--- a/docforge/templates/wpis_list.jinja2
+++ b/docforge/templates/wpis_list.jinja2
@@ -3,7 +3,10 @@
 <table>
 <tr>
 {% for i in items[0] %}
-<td><a href='?sort={{i[0]}}{% if act == i[0]%}&rev=1{%endif%}'>{{i[0]}}</a></td>
+<td><a href='?sort={{i[0]}}{% if act == i[0]%}&rev=1{%endif%}'>{{i[0]}}</a>
+<a href='?sort={{i[0]}}&rev=1'><img src='/static/arrow_down.jpg' width='20px'></a>
+<a href='?sort={{i[0]}}'><img src='/static/arrow_up.jpg' width='20px'></a>
+</td>
 {% endfor %}
 </tr>
 {% for i in items %}
