--- a/docforge/templates/base.jinja2
+++ b/docforge/templates/base.jinja2
@@ -2,6 +2,8 @@
 <html>
 <head>
 <script type='text/javascript' src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
+<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 <title>DocForge</title>
 {% block head %}
 {% endblock %}
