wykrywanie zmiennych templatowych

--- a/docforge/templates/edytor.jinja2
+++ b/docforge/templates/edytor.jinja2
@@ -17,7 +17,7 @@ Tu będzie menu<br/>
 Aktualny: <span id='akt'></span>
 </div>
 	<div id='main' class='ui-widget-content editable' style='border: 1px black solid; clear: both;'>
-	A to wizualna część
+	<span></span>
 	</div>
 </div>
 
