zapisywanie do bazy formularza

--- a/docforge/templates/edytor.jinja2
+++ b/docforge/templates/edytor.jinja2
@@ -4,6 +4,7 @@
 <script src='/static/edytor.js'></script>
 {% endblock %}
 {% block content %}
+Nazwa: <input type='text' id='nazwa'><br/>
 <div id='menu' style='float:left'>
 <button id='add'>Dodaj</button><br/>
 <button id='del'>Usuń</button><br/>
@@ -16,6 +17,7 @@ Tu będzie menu<br/>
 </div>
 Aktualny: <span id='akt'></span>
 </div>
+<div>
 	<div id='main' class='ui-widget-content editable' style='border: 1px black solid; clear: both;'>
 	<span></span>
 	</div>
